<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tag_hint">Tag can be number, alphabet, underscore, Chinese. Use , to split many
        tags.
    </string>
    <string name="alias_hint">Alias can be number, alphabet, underscore, Chinese.</string>
    <string name="style_hint">style should be number</string>
    <string name="app_name">百信学车</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="phone">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="login_btn">登 录</string>
    <string name="register">免费注册</string>
    <string name="callback">找回密码</string>
    <string name="morenews">更多关于百信学车</string>
    <string name="baixin">百信学车</string>
    <string name="underline_text">
        <u>百信学车服务条款</u>
    </string>
    <string name="version_unknown">请求异常</string>
    <string name="line">
        <hr/>
    </string>
    <string name="gotonext">前往完成下一步</string>
    <string name="gotobaoming">前去报名</string>
    <string name="complete">前去完善信息</string>
    <string name="mianqian">申请面签体检</string>
    <string name="sub1">准备考试中</string>
    <string name="sub2">预约科目二考试</string>
    <string name="sub3">预约科目三考试</string>
    <string name="sub4">预约科目四考试</string>
    <string name="sub11">科目一未通过，请缴补考费</string>
    <string name="sub21">科目二未通过，请缴补考费</string>
    <string name="sub31">科目三未通过，请缴补考费</string>
    <string name="sub41">科目四未通过，请缴补考费</string>
    <string name="subing1">申请科目一考试</string>
    <string name="subing2">申请科目二</string>
    <string name="subing3">申请科目三</string>
    <string name="subing4">申请科目四</string>
    <string name="mycoupon">优惠劵</string>
    <string name="comTotal">等待拿证</string>
    <string name="immediate_bug">学时不够？立即购买</string>
    <string name="extra_hours_package">多余的学时套餐怎么办</string>
    <string name="balance_recharge">余额充值:</string>
    <string name="weixin_zhifu">微信支付</string>
    <string name="union_zhifu">银行卡支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="alipay_user">仅支持有支付宝账号的用户</string>
    <string name="weixin_user">请在微信6.0.2及以上版本使用</string>
    <string name="recharge_protocol">点击去充值， 即表示已阅读并同意</string>
    <string name="payment_protocol">点击立即支付， 即表示已阅读并同意</string>
    <string name="payment_protocol_txt">支付协议</string>
    <string name="recharge_protocol_txt">充值协议</string>
    <string name="go_recharge">去充值</string>
    <string name="go_payment">立即支付</string>
    <string name="balance_deal">余额用不完怎么办？</string>
    <string name="refund_record">退款记录</string>
    <string name="person_percar">一人一车</string>
    <string name="priclass_fuwu">·金牌教官 ·优质服务</string>
    <string name="choose_tv">请选择您需要退款的套餐：</string>
    <string name="guide_type">指南类型</string>
    <string name="classic_registion">经典班报名</string>
    <string name="private_regisition">私教班报名</string>
    <string name="classic_instructions">经典班使用说明</string>
    <string name="private_instructions">私教班使用说明</string>
    <string name="baixinbanquan">Copyright@2017九鬼科技.All rights reserved</string>
    <string name="baixin_sijiao">《百信学车私教服务条款》</string>
    <string name="baixin_recharge_protocol_txt">《百信学车充值协议》</string>
    <string name="team_pri_txt">
        百信学车是中国领先的一对一私教学车私教陪练平台,以优质的服务让学员乐享学车,学员可以通过平台自选场地、自选教练、预约练车、预约考试等,风里雨里,我们在百信...
    </string>
    <string name="pay">
        <u>前去付款</u>
    </string>
    <string name="changeCoach">
        <u>更改教练</u>
    </string>
    <string name="nothing">
        <u>该时间段暂无排课，请选择其他时间段。</u>
    </string>
    <string name="search_all">大家都在搜</string>
    <string name="search_lately">最近搜索</string>
    <string name="search_clear">清除历史</string>

    <string-array name="planets_array">
        <item>修改资料</item>
        <item>我的学车</item>
        <item>详细</item>
        <item>设置</item>
        <item>更多关于百信学车</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string-array name="spinger1">
        <item>合肥</item>
    </string-array>
    <string-array name="spinger2">
        <item>越达驾校(新周谷堆校区)</item>
        <item>越达驾校(包河区第一校区)</item>
        <item>越达驾校(大学城中心校区)</item>
        <item>越达驾校(蜀山区新华校区)</item>
        <item>越达驾校(庐阳区总校区)</item>
    </string-array>

    <style name="Dialog" parent="android:style/Theme.Dialog">
        <item name="android:background">#00000000</item>
        <item name="android:windowBackground">@android:color/transparent</item>
        <item name="android:windowNoTitle">true</item>
        <item name="android:windowIsFloating">true</item>
    </style>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>