<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recharge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.jgkj.bxxc.activity.RechargeActivity">

    <include
        layout="@layout/title"
        android:id="@+id/include2"/>
    <LinearLayout
        android:id="@+id/linea"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_below="@+id/include2"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/balance_recharge"
            android:textSize="20sp"
            />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recylerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/background"
        android:layout_below="@id/linea"
        />
    <LinearLayout
        android:id="@+id/payMethod1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/linea"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:src="@drawable/pay"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/alipay"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:hint="@string/alipay_user"
                android:maxLines="1"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/aipay_layout"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center">
            <ImageView
                android:id="@+id/aipay_isCheck"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/check_background"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/background"
        android:layout_below="@id/payMethod1"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="0dp"
        android:layout_marginEnd="0dp"
        />
    <LinearLayout
        android:id="@+id/payMethod2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/payMethod1"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:src="@drawable/weixin_zhifu"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/weixin_zhifu"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:hint="@string/weixin_user"
                android:maxLines="1"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/weixin_layout"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center">
            <ImageView
                android:id="@+id/weixin_isCheck"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/check_background"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/background"
        android:layout_below="@id/payMethod2"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/recharge_protocol"
            android:layout_marginStart="20dp"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/recharge_protocol_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recharge_protocol_txt"
            android:textSize="12sp"
            android:textColor="@color/btn_orange"
            />
    </LinearLayout>


    <Button
        android:id="@+id/btn_recharge"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/tv_bg_pay"
        android:text="@string/go_recharge"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
