<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:orientation="vertical">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/themeColor"
    >
        <Button
            android:id="@+id/button_backward"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:drawableLeft="@drawable/back"
            android:ellipsize="end"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingLeft="8dp"
            android:singleLine="true"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/shape_search_app_bg_yj"
            android:orientation="horizontal">
            <!-- 输入的搜索信息 -->
            <EditText
                android:id="@+id/et_search"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:imeOptions="actionSearch"
                android:layout_marginLeft="10dp"
                android:textColor="#0e0e0e"
                android:textSize="15sp"
                android:singleLine="true"
                android:hint="请输入要搜索的教练"
                android:textColorHint="#b0c6ce"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/ic_search_app_left"
                android:background="@null"/>
            <!-- 清空搜索文字按钮 -->
            <LinearLayout
                android:id="@+id/layout_clear_search_text"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:visibility="gone"
            >
                <Button
                    android:id="@+id/btn_clear_search_text"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:padding="5dp"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/selector_btn_search_clear_text_right"

                />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/cancel"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:ellipsize="end"
            android:gravity="center"
            android:onClick="onClick"
            android:singleLine="true"
            android:text="取消"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            />
    </RelativeLayout>
    <ListView android:id="@+id/widget_layout_item"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:visibility="gone"
    />
    <LinearLayout
        android:id="@+id/resou"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/huise"
            android:text="@string/search_all"
        />
        <include
            android:id="@+id/shadowview"
            layout="@layout/shadow_set_layout" />
        <com.jgkj.bxxc.tools.FlowLayout
            android:id="@+id/id_flowlayouthot"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        /></com.jgkj.bxxc.tools.FlowLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/huise"
                android:text="@string/search_lately"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/red"
                android:id="@+id/tv_clearolddata"
                android:text="@string/search_clear"
                android:background="@drawable/sousuo_clearolddata_shap"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp" />
        </RelativeLayout>
        <include
            android:id="@+id/shadowview"
            layout="@layout/shadow_set_layout" />
        <com.jgkj.bxxc.tools.selfSearchGridView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gridviewolddata"
            android:numColumns="3"
            android:gravity="center"
            android:padding="10dp"
        />
    </LinearLayout>

</LinearLayout>

