<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/white"
>
    <include android:id="@+id/title"
             layout="@layout/title"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/line1"
                  android:layout_below="@+id/title"
                  android:gravity="center"
                  android:orientation="vertical"
                  >
        <ImageView android:layout_width="130dp"
                   android:layout_height="130dp"
                   android:src="@drawable/ic_launcher"
                   android:scaleType="centerCrop"
                   android:layout_marginTop="30dp"
                   android:id="@+id/img_icon"
        />
        <TextView
            android:id="@+id/softInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="百信学车 v1.0.1"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:id="@+id/line2"
        android:background="#FFFFFF"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/new_softInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:text="新版更新"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/line3"
        android:layout_below="@+id/line2"
        android:background="#FFFFFF"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:text="好评支持"/>
        <TextView
            android:id="@+id/goodprise_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="15dp"
            android:drawableRight="@drawable/right_arrow"
            android:gravity="right"
            android:paddingBottom="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line3"
        android:id="@+id/line4"
        android:background="#FFFFFF"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:text="微信公众号"/>
        <TextView
            android:id="@+id/wechat_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="15dp"
            android:drawableRight="@drawable/right_arrow"
            android:text="bxxueche"
            android:textColor="@color/gray"
            android:gravity="right"
            android:paddingBottom="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line4"
        android:id="@+id/line5"
        android:background="#FFFFFF"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:text="客服电话"/>
        <TextView
            android:id="@+id/kefu_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="15dp"
            android:drawableRight="@drawable/right_arrow"
            android:text="17756086205"
            android:textColor="@color/gray"
            android:gravity="right"
            android:paddingBottom="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
        />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/line6"
                  android:layout_alignParentBottom="true"
    >
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/baixinbanquan"
                  android:textColor="@color/gray"
                  android:textSize="12sp"
                  android:gravity="center"
                  android:paddingBottom="10dp"
        />
    </LinearLayout>
    <LinearLayout android:id="@+id/line7"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_above="@+id/line6"
    >
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/baixin_sijiao"
                  android:gravity="center"
                  android:paddingBottom="8dp"
                  android:text="@string/baixin_sijiao"
                  android:textColor="@color/btn_blue"
                  android:textSize="12sp"
        />
    </LinearLayout>
    <LinearLayout android:id="@+id/line8"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_above="@+id/line7"
    >
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/recharge_protocol_txt"
                  android:gravity="center"
                  android:paddingBottom="5dp"
                  android:text="@string/baixin_recharge_protocol_txt"
                  android:textColor="@color/btn_blue"
                  android:textSize="12sp"
        />
    </LinearLayout>
</RelativeLayout>
